<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- MapFragment para exibir o mapa -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="67dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/zoom_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginEnd="92dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/zoom_out_button"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="267dp"
            android:layout_marginEnd="188dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/zoom_in_button"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="423dp"
        android:layout_gravity="top" />

    <Button
        android:id="@+id/btnRegistrarTrilha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Registrar_Trilha"
        android:onClick="iniciarRegistroTrilha"/>

    <Button
        android:id="@+id/btnGerenciarTrilha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Gerenciar_Trilha" />

    <Button
        android:id="@+id/btnCompartilharTrilha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Compartilhar_Trilha" />

    <Button
        android:id="@+id/btnConfiguracao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/config" />

    <Button
        android:id="@+id/btnSobre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creditos" />


</LinearLayout>
